Terminada correccion notificaciones
